# Parallel-Programming

./: README.md
pract1/: CMakeLists.txt  README.md  consistent.cpp  distributed_vectors.cpp  shared_vectors.cpp
pract2/: CMakeLists.txt  README.md  main.cpp
pract3/: CMakeLists.txt  README.md  main.cpp
pract4/: CMakeLists.txt  Iallgather.cpp  README.md  point_point_communications.cpp
pract5/: CMakeLists.txt  README.md  main.cpp
